<resources>
    <string name="app_name">SubmissionBFAA</string>

    <string name="githubuser">GithubUser</string>
    <string name="cari">Cari…</string>
    <string name="parepare_indonesia">Parepare, Indonesia</string>
    <string name="follower">Follower: %1$s</string>
    <string name="following">Following: %1$s</string>
    <string name="repository">Repository: %1$s</string>
    <string name="localization">localization</string>
    <string name="follower1">Follower</string>
    <string name="github_user_app">GithubUserApp</string>
    <string name="following1">Following</string>
    <string name="valendionpp" translatable="false">\u0040valendionpp</string>
    <string name="enter_word">Enter the word</string>
    <string name="search">Search</string>
    <string name="empty_data">Empty Data</string>
    <string name="valendion" translatable="false">Valendion</string>
    <string name="imageNoData">Image No Data</string>
    <string name="imageSplashScreen">Image Splash Screen</string>
    <string name="about">About</string>
    <string name="title_activity_favorite">FavoriteActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="key_dark_mode">dark_mode</string>
    <string name="title_dark_mode">Dark Mode</string>
    <string name="text_dark_mode">Dark Mode</string>
</resources>