<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_bg"
    tools:context=".ui.DetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mainToolbar"
        android:layout_width="match_parent"
        app:menu="@menu/setting_menu"
        app:title="Detail User"
        app:titleTextColor="@color/white"
        android:background="@color/black_dark"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userGithubIv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/distance_16"
        android:src="@drawable/ic_person_24"
        app:civ_border_color="@color/black"
        app:civ_border_width="1dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainToolbar" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnFavorite"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="@+id/userGithubIv"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/distance_16"
        android:src="@drawable/ic_favorite_border_24"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/nameTv"
        style="@style/textTitleBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/valendion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userGithubIv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/usernameTv"
        style="@style/textsubTitleWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/valendionpp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/nameTv"
        app:layout_constraintStart_toStartOf="@+id/nameTv"
        app:layout_constraintTop_toBottomOf="@+id/nameTv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/locationTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="visible"
        android:gravity="center"
        android:drawablePadding="@dimen/distance_8"
        style="@style/textRegularBlack"
        android:text="@string/parepare_indonesia"
        app:drawableStartCompat="@drawable/ic_location"
        app:layout_constraintStart_toStartOf="@+id/followerTv"
        app:layout_constraintTop_toBottomOf="@+id/followerTv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="visible"
        android:gravity="center"
        style="@style/textRegularBlack"
        android:text="SUN"
        android:drawablePadding="@dimen/distance_8"
        app:drawableStartCompat="@drawable/ic_company"
        app:layout_constraintStart_toStartOf="@+id/locationTv"
        app:layout_constraintTop_toBottomOf="@+id/locationTv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/followerTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginTop="@dimen/distance_16"
        android:text="@string/follower"
        android:gravity="center"
        style="@style/textRegularBlack"
        android:drawablePadding="@dimen/distance_8"
        app:drawableStartCompat="@drawable/follower"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/followingTv"
        app:layout_constraintTop_toBottomOf="@+id/usernameTv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/followingTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:text="@string/following"
        android:gravity="center"
        android:drawablePadding="@dimen/distance_8"
        style="@style/textRegularBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:drawableStartCompat="@drawable/following"
        app:layout_constraintStart_toEndOf="@+id/followerTv"
        app:layout_constraintTop_toTopOf="@+id/followerTv" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/followTL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_32"
        android:background="@color/black_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCompany"
        app:tabIndicatorColor="@color/white_bg"
        app:tabTextColor="@color/white_bg" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/followVP"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/followTL" />

</androidx.constraintlayout.widget.ConstraintLayout>